examples/test/testpolicy15202.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15202
  namespace: namespace449
spec:
  podSelector:
    matchLabels:
      key0: value8
      key41: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value48
          key42: value16
          key7: value6
      podSelector:
        matchLabels:
          key48: value8
